--- a/css/main.css
+++ b/css/main.css
@@ -186,17 +186,18 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .wrap-login100 {
-  width: 500px;
+  width: 450px;
+  height: 600px;
   border-radius: 10px;
   overflow: hidden;
   padding: 55px 55px 37px 55px;
 
-  background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+  background: #95f852;
+  background: -webkit-linear-gradient(top, #19384A, #347787);
   background: -o-linear-gradient(top, #7579ff, #b224ef);
   background: -moz-linear-gradient(top, #7579ff, #b224ef);
   background: linear-gradient(top, #7579ff, #b224ef);
@@ -205,12 +206,21 @@ iframe {
 
 /*------------------------------------------------------------------
 [ Form ]*/
+.text-center-forgot-password{
+  padding: 75px;
+  text-align: center;
+}
+
 
 .login100-form {
   width: 100%;
+  margin-top: 30px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 
-.login100-form-logo {
+.wrap-biopath-logo {
   font-size: 60px; 
   color: #333333;
 
@@ -221,22 +231,11 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  border-radius: 25px;
   background-color: #fff;
-  margin: 0 auto;
-}
-
-.login100-form-title {
-  font-family: Poppins-Medium;
-  font-size: 30px;
-  color: #fff;
-  line-height: 1.2;
-  text-align: center;
-  text-transform: uppercase;
-
-  display: block;
+  margin: -20px 0px -15px 80px;
 }
 
 
@@ -426,7 +425,7 @@ iframe {
   border-radius: 25px;
 
   background: #9152f8;
-  background: -webkit-linear-gradient(bottom, #7579ff, #b224ef);
+  background: -webkit-linear-gradient(bottom, #347787 #347787);
   background: -o-linear-gradient(bottom, #7579ff, #b224ef);
   background: -moz-linear-gradient(bottom, #7579ff, #b224ef);
   background: linear-gradient(bottom, #7579ff, #b224ef);
