--- a/css/main.css
+++ b/css/main.css
@@ -198,9 +198,9 @@ iframe {
 
   background: #95f852;
   background: -webkit-linear-gradient(top, #19384A, #347787);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
+  background: -o-linear-gradient(top, #19384A, #347787);
+  background: -moz-linear-gradient(top, #19384A, #347787);
+  background: linear-gradient(top, #19384A, #347787);
 }
 
 
