--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -31,9 +31,9 @@
 <body>
 	
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<div class="wrap-login100">
-				<img src="images/logo.png" alt="biopath_logo goes here" class="wrap-biopath-logo">
+				<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo">
 				
 				<form class="login100-form">
 					
@@ -53,18 +53,8 @@
 							Remember me
 						</label>
 					</div>
-
 					{% block body %}
-					<div>
-						<h2>{{ text }}</h2>
-						{% for username in user_names %}
-						<h1>
-						     {{User.username}}
-						 </h1>
-						{end for}
-				    </div>
 					{% endblock %}
-
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							<a href="https://www.google.com">Login</a>
