--- a/testApp/static/css/moduleEdit.css
+++ b/testApp/static/css/moduleEdit.css
@@ -103,7 +103,7 @@ input.radio {
     font-size: 16px;
 }
 
-#enzymes, #products, #substrates, #imageCanvas{
+#enzymes, #products, #substrates{
   float:left;
   display: inline;
 }
