--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -1,6 +1,20 @@
 {% extends 'index.html' %}
 
 {% block body %}
+
+<script>
+        var x = false
+        var username = document.getElementById('username').value
+        var pass = document.getElementById('pass').value
+
+</script>
+
+<h3>{{ userExists }}</h3>
+
 <h2>{{ user_name }}</h2>
 <h2>{{ pass_word }}</h2>
+
+
+
+
 {% endblock %}
