--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -9,9 +9,9 @@
 
 </script>
 
-<h3>{{ userExists }}</h3>
+<h3>jhvjvjh gfgfxgfx</h3>
 
-<h2>{{ user_name7 }}</h2>
+<h2>{{ user_name }}</h2>
 <h2>{{ pass_word }}</h2>
 
 
