--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -14,7 +14,7 @@ if(var1==username){
 }
 
 console.log(output)
-console.log("asdgfasdgwEG")
+console.log(var1)
 </script>
 
 <h2>{{ pass_word }}</h2>
