--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -4,8 +4,8 @@
 
 <script type ="text/javascript">
         var x = false
-        var username = document.getElementsByName('username').value
-        var pass = document.getElementsByName('pass').value
+        var username = document.getElementsByName('username')
+        var pass = document.getElementsByName('pass')
 
 var output = false
 var var1 = "{{ user_name }}";
