--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -40,12 +40,12 @@
 				<form class="login100-form">
 					
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="user1">
+						<input class="input100" type="text" name="username" id="username" placeholder="Username" value="user1">
 						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="pass" id="pass" placeholder="Password">
 						<span class="focus-input100" data-placeholder="&#xf191;"></span>
 					</div>
 
