--- a/testApp/static/css/moduleEdit.css
+++ b/testApp/static/css/moduleEdit.css
@@ -48,10 +48,10 @@ button {
     overflow: hidden;
     padding: 100px;
     background: #9152f8;
-    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-    background: -o-linear-gradient(top, #7579ff, #b224ef);
-    background: -moz-linear-gradient(top, #7579ff, #b224ef);
-    background: linear-gradient(top, #7579ff, #b224ef);
+    background: -webkit-linear-gradient(top, #19384A, #347787);
+    background: -o-linear-gradient(top, #19384A, #347787);
+    background: -moz-linear-gradient(top, #19384A, #347787);
+    background: linear-gradient(top, #19384A, #347787);
     align-content:center;
 }
 
