--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -37,10 +37,11 @@
 				<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo">
 				
 				<a href="{% url 'modelEdit' %}">Model Edit</a>
+				<!--<a href="{% url 'modelChoice' %}">Model Choice</a>-->
 				<form class="login100-form">
 					
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" id="username" placeholder="Username" value="user1">
+						<input class="input100" type="text" name="username" id="username" placeholder="Username">
 						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
 
@@ -55,10 +56,8 @@
 							Remember me
 						</label>
 					</div>
-					{% block body %}
-					{% endblock %}
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+						<button class="login100-form-btn" id="login">
 							Login
 						</button>
 					</div>
@@ -68,6 +67,8 @@
 							Forgot Password?
 						</a>
 					</div>
+					{% block body %}
+					{% endblock %}
 				</form>
 			</div>
 		</div>
