--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -57,7 +57,7 @@
 						</label>
 					</div>
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" id="login">
+						<button type="button" class="login100-form-btn" id="login">
 							Login
 						</button>
 					</div>
