--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -57,9 +57,9 @@
 						</label>
 					</div>
 					<div class="container-login100-form-btn">
-						<button type="button" class="login100-form-btn" id="login">
+						<a href="modelEdit.html"><button type="button" class="login100-form-btn" id="login">
 							Login
-						</button>
+						</button></a>
 					</div>
 
 					<div class="text-center-forgot-password" >
