--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -53,7 +53,7 @@
 					<div class="contact100-form-checkbox">
 						<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
 						<label class="label-checkbox100" for="ckb1">
-							Remember me
+							Remember me iugliuygvluyf
 						</label>
 					</div>
 					<div class="container-login100-form-btn">
