--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -61,12 +61,13 @@
 							Login
 						</button></a>
 					</div>
-					
-
-					<div class="text-center-forgot-password" >
+					<div class="text-center-forgot-password" ></div>
 						<a class="txt1" href="{% url 'register' %}">
 							Don't have an account? Click Here
 						</a>
+					</div>
+					<div class="text-center-forgot-password" >
+						
 						<a class="txt1" href="#">
 							Forgot Password?
 						</a>
