--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -6,22 +6,18 @@
         var username = document.getElementById('username');
         var pass = document.getElementById('pass');
         var loginBtn = document.getElementById('login');
-        pass.addEventListener("input", function() {
+        
+        loginBtn.addEventListener("click",function(){
+                user = authenticate(username='user1', password='password')
+                if(user != None){
+                        console.log("Shit Worked");
+                }               
+                else{
+                        console.log("Shit did not work")
+                }
                 var output = false;
                 var var1 = "{{ user_name }}";
                 var pass1 = "{{ pass_word }}";
-                if(var1==username.value && pass1 == pass.value){
-                        output = true;
-                        console.log(output);
-                        console.log("Username: ", username.value, " = ", var1);
-                        console.log("Password: ", pass.value, " = ", pass1);
-                }
-        });
-        
-        loginBtn.addEventListener("click",function(){
-                var output = false;
-                var var1 = "{{ user_name }}";
-                var pass1 = "{{pass_word}}";
                 if(var1==username.value && pass1 == pass.value){
                         output = true;
                         console.log(output);
