--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -57,20 +57,20 @@
 						</label>
 					</div>
 					<div class="container-login100-form-btn">
-						<a href="{% url 'modelEdit' %}"><button type="button" class="login100-form-btn" id="login">
+						<a href="#"><button type="button" class="login100-form-btn" id="login">
 							Login
 						</button></a>
 					</div>
-					<div class="text-center-forgot-password" ></div>
-						<a class="txt1" href="{% url 'register' %}">
-							Don't have an account? Click Here
-						</a>
-					</div>
+					
 					<div class="text-center-forgot-password" >
-						
+						<a class="txt1" href="{% url 'register' %}">
+								Don't have an account? Click Here
+						</a>
+
 						<a class="txt1" href="#">
 							Forgot Password?
 						</a>
+						
 					</div>
 					{% block body %}
 					{% endblock %}
