--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -11,6 +11,7 @@
                 user = authenticate(username='user1', password='password')
                 if(user != None){
                         console.log("Shit Worked");
+                        window.location="{% url 'modelEdit' %}"
                 }               
                 else{
                         console.log("Shit did not work")
