--- a/testApp/templates/accounts/login.html
+++ b/testApp/templates/accounts/login.html
@@ -1,5 +1,11 @@
 {% extends 'index.html' %}
 
-{% block body %}
+{% block login %}
+
+<div class="container-login100-form-btn">
+                <a href="#"><button type="button" class="login100-form-btn" id="login">
+                        Login
+                </button></a>
+</div>
 
 {% endblock %}
