--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -56,16 +56,14 @@
 							Remember me
 						</label>
 					</div>
-					<div class="container-login100-form-btn">
-						<a href="#"><button type="button" class="login100-form-btn" id="login">
-							Login
-						</button></a>
-					</div>
+
+					{% block login %}
+					{% endblock %}
 					
 					<div class="text-center-forgot-password" >
 						<a class="txt1" href="{% url 'register' %}">
 								Don't have an account? Click Here
-						</a>
+					</a>
 
 						<a class="txt1" href="#">
 							Forgot Password?
