--- a/testApp/templates/db_display/display.html
+++ b/testApp/templates/db_display/display.html
@@ -1,5 +1,15 @@
 {% extends 'index.html' %}
 
+{% block login %}
+
+<div class="container-login100-form-btn">
+                <a href="#"><button type="button" class="login100-form-btn" id="login">
+                        Login
+                </button></a>
+</div>
+
+{% endblock %}
+
 {% block body %}
 
 <script type ="text/javascript">
