--- a/testApp/templates/accounts/display.html
+++ b/testApp/templates/accounts/display.html
@@ -1,5 +1,24 @@
 {% extends 'index.html' %}
 
+{% block login %}
+
+<div class="container-login100-form-btn">
+                <a href="#"><button type="button" class="login100-form-btn" id="login">
+                        Login
+                </button></a>
+</div>
+
+{% endblock %}
+
+{% block signup %}
+        
+<a class="txt1" href="{% url 'register' %}">
+    Don't have an account? Click Here
+</a>
+
+{% endblock %}
+
+
 
 {% block body %}
 
