--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -207,6 +207,7 @@ iframe {
 /*------------------------------------------------------------------
 [ Form ]*/
 .text-center-forgot-password{
+  margin: -50%;
   padding: 10px;
   text-align: center;
 }
