--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -207,7 +207,7 @@ iframe {
 /*------------------------------------------------------------------
 [ Form ]*/
 .text-center-forgot-password{
-  
+  margin-top: -30px;
 }
 
 
