--- a/testApp/templates/accounts/display.html
+++ b/testApp/templates/accounts/display.html
@@ -11,6 +11,10 @@
 {% endblock %}
 
 {% block signup %}
+        
+<a class="txt1" href="{% url 'register' %}">
+    Don't have an account? Click Here
+</a>
 
 {% endblock %}
 
