--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -143,7 +143,6 @@ iframe {
 [ Utility ]*/
 .txt1 {
   font-family: Poppins-Regular;
-  margin: -10px;
   font-size: 13px;
   color: #e5e5e5;
   line-height: 1.5;
@@ -208,8 +207,8 @@ iframe {
 /*------------------------------------------------------------------
 [ Form ]*/
 .text-center-forgot-password{
-  width: 200px;
-  height: 150px;
+  padding: 15px;
+  text-align: center;
 }
 
 
