--- a/testApp/templates/accounts/display.html
+++ b/testApp/templates/accounts/display.html
@@ -13,7 +13,7 @@
 {% block signup %}
         
 <a class="txt1" href="{% url 'register' %}">
-    Don't have an account? Click Here <br>
+    Don't have an account? <br>
 </a>
 
 {% endblock %}
