--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Module Edit Screen</title>
@@ -16,9 +16,9 @@
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Fructose-6-Phosphate" src="{% static 'images/Fructose-6-Phosphate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="Fructose-1,6-bisphosphate" src="{% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Fructose-1,6-bisphosphate" src={"% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="{% static 'images/Dihydroxyacetone Phosphate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="{% static 'images/Glyceraldehyde-3-phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src={"% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="1,3-bisphoglycerate" src="{% static 'images/1,3-bisphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="3 phosphoglycerate" src="{% static 'images/3 phosphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="2 phosphoglycerate" src="{% static 'images/2 phosphoglycerate.jpg' %}" style="display: none;">
@@ -165,11 +165,13 @@
 															<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
+
 										    	</ul>
 												</div>
 
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
-												<label class="weight">
+												<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
+												<!-- <label class="weight">
 													<label class=weightLabel>Weight:</label>
 													<input type="range" list="tickmarks" id="weightSlider" name="Weight" min="-1" max ="1" step=0.01 onchange="updateTextInput(this.value);">
 														<datalist id="tickmarks" class="tickmarks">
@@ -196,8 +198,8 @@
 														  <option value="1.0">
 														</datalist>
 														<input class="weightValue" type="text" id="weightSliderValue">
-														<button type="button" class="enterWeight" id="submitWeight">SUBMIT</button>
-												</label>
+														<button type="button" class="enterWeight" id="submitWeight">SUBMIT</button> -->
+												<!-- </label>
 												<label class="reversibleChoice">Reversible
 													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Reversible">
 													<span class="checkmark"></span>
@@ -205,7 +207,16 @@
 												<label class="reversibleChoice">Irreversible
 													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
 													<span class="checkmark"></span>
-												</label>
+												</label> -->
+											</div>
+											<!-- The Modal -->
+											<div id="invalidModal" class="modal">
+
+											  <!-- Modal content -->
+											  <div class="modal-content">
+											    <span class="close">&times;</span>
+											    <p>You must select at least one substrate, enzyme and product, as well as no more than five products or substrates.</p>
+											  </div>
 											</div>
 				</form>
 			</div>
