--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -29,16 +29,25 @@
                             <div class="flex-sliders">
                                 <h3 style="padding:10px 20px">Variables</h3>
                                 <div class="variable-holder">
-                                        <label for="hexokinase">Hexokinase</label>
-                                        <input type="range" min="0" max="10" value="5" class="variables" id="hexokinase">
+                                    <label for="enzyme1">Hexokinase</label>
+                                    <div class="inner-flex-horiz">
+                                        <input type="range" min="0" max="10" value="5" class="variables" id="enzyme1">
+                                        <h4 id="enzyme1value">5</h4>
+                                    </div>
                                 </div>
                                 <div class="variable-holder">
-                                        <label for="enzyme2">Enzyme2</label>
+                                    <label for="enzyme2">Enzyme2</label>
+                                    <div class="inner-flex-horiz">
                                         <input type="range" min="0" max="10" value="5" class="variables" id="enzyme2">
+                                        <h4 id="enzyme2value">5</h4>
+                                    </div>
                                 </div>
                                 <div class="variable-holder">
-                                        <label for="enzyme3">Enzyme3</label>
+                                    <label for="enzyme3">Enzyme3</label>
+                                    <div class="inner-flex-horiz">
                                         <input type="range" min="0" max="10" value="5" class="variables" id="enzyme3">
+                                        <h4 id="enzyme3value">5</h4>
+                                    </div>
                                 </div>
                             </div>
                     </div>
