--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -16,9 +16,9 @@
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Fructose-6-Phosphate" src="{% static 'images/Fructose-6-Phosphate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="Fructose-1,6-bisphosphate" src={"% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Fructose-1,6-bisphosphate" src="{% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="{% static 'images/Dihydroxyacetone Phosphate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src={"% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="{% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="1,3-bisphoglycerate" src="{% static 'images/1,3-bisphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="3 phosphoglycerate" src="{% static 'images/3 phosphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="2 phosphoglycerate" src="{% static 'images/2 phosphoglycerate.jpg' %}" style="display: none;">
