Minor change to modelEdit.html

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -25,31 +25,33 @@
                         </div>
                     </div>
                     <div class="flex-horiz">
+                        <a href="{% url 'moduleEdit' %}" id="link-to-module">
                             <canvas id="modelEditCanvas" height="800" width="800"></canvas>
-                            <div class="flex-sliders">
-                                <h3 style="padding:10px 20px">Variables</h3>
-                                <div class="variable-holder">
-                                    <label for="enzyme1">Hexokinase</label>
-                                    <div class="inner-flex-horiz">
-                                        <input type="range" min="0" max="10" value="5" class="variables" id="enzyme1">
-                                        <h4 id="enzyme1value">5</h4>
-                                    </div>
-                                </div>
-                                <div class="variable-holder">
-                                    <label for="enzyme2">Enzyme2</label>
-                                    <div class="inner-flex-horiz">
-                                        <input type="range" min="0" max="10" value="5" class="variables" id="enzyme2">
-                                        <h4 id="enzyme2value">5</h4>
-                                    </div>
-                                </div>
-                                <div class="variable-holder">
-                                    <label for="enzyme3">Enzyme3</label>
-                                    <div class="inner-flex-horiz">
-                                        <input type="range" min="0" max="10" value="5" class="variables" id="enzyme3">
-                                        <h4 id="enzyme3value">5</h4>
-                                    </div>
+                        </a>
+                        <div class="flex-sliders">
+                            <h3 style="padding:10px 20px">Variables</h3>
+                            <div class="variable-holder">
+                                <label for="hexokinase">Hexokinase</label>
+                                <div class="inner-flex-horiz">
+                                    <input type="range" min="0" max="10" value="5" class="variables" id="enzyme1">
+                                    <h4 id="enzyme1value">5</h4>
                                 </div>
                             </div>
+                            <div class="variable-holder">
+                                <label for="enzyme2">Phosphofructokinase</label>
+                                <div class="inner-flex-horiz">
+                                    <input type="range" min="0" max="10" value="5" class="variables" id="enzyme2">
+                                    <h4 id="enzyme2value">5</h4>
+                                </div>
+                            </div>
+                            <div class="variable-holder">
+                                <label for="enzyme3">Enzyme3</label>
+                                <div class="inner-flex-horiz">
+                                    <input type="range" min="0" max="10" value="5" class="variables" id="enzyme3">
+                                    <h4 id="enzyme3value">5</h4>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     </div>
 				</form>
