--- a/testApp/templates/register.html
+++ b/testApp/templates/register.html
@@ -34,7 +34,7 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<div class="wrap-login100">
-				<img src="images/logo.png" alt="biopath_logo goes here" class="wrap-biopath-logo">
+				<img src="{% static 'images/logo.png' %}" alt="biopath_logo goes here" class="wrap-biopath-logo">
 
 				<form class="login100-form">
 
