--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -15,13 +15,12 @@
 				<form class="login100-form validate-form">
                     <div class="editToolbar">
                         <div class="innerToolbar">
-                            <button class="editToolbarButton">BioChem App</button>
-                            <button class="editToolbarButton">Settings</button>
+                            <button class="editToolbarButton" type="button">Home</button>
+                            <button class="editToolbarButton" type="button">Settings</button>
                         </div>
                         <div class="innerToolbar">
-                            <button class="editToolbarButton">Help</button>
-                            <button class="editToolbarButton">Info</button>
-                            <button class="editToolbarButton">Menu</button>
+                            <button class="editToolbarButton" type="button">Help</button>
+                            <button class="editToolbarButton" id="logout" type="button">Logout</button>
                         </div>
                     </div>
                     <div class="flex-horiz">
