--- a/testApp/templates/register.html
+++ b/testApp/templates/register.html
@@ -38,8 +38,8 @@
 
 				<form class="login100-form">
 
-					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="Username">
+					<div class="wrap-input100 validate-input" data-validate = "Enter email">
+						<input class="input100" type="email" name="email" placeholder="email">
 						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
 
