--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -40,8 +40,8 @@
 				<!--<a href="{% url 'modelChoice' %}">Model Choice</a>-->
 				<form class="login100-form">
 					
-					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" id="username" placeholder="Username">
+					<div class="wrap-input100 validate-input" data-validate = "Enter email">
+						<input class="input100" type="email" name="email" id="email" placeholder="Email">
 						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
 
