--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -263,6 +263,32 @@ iframe {
   padding: 0 5px 0 38px;
 }
 
+#id_username {
+  font-family: Poppins-Regular;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+
+  display: block;
+  width: 100%;
+  height: 45px;
+  background: transparent;
+  padding: 0 5px 0 38px;
+}
+
+#id_password {
+  font-family: Poppins-Regular;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+
+  display: block;
+  width: 100%;
+  height: 45px;
+  background: transparent;
+  padding: 0 5px 0 38px;
+}
+
 /*---------------------------------------------*/ 
 .focus-input100 {
   position: absolute;
