--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -39,12 +39,12 @@
 												<div id="subsContainer">
 													<label id="subsLabel">SUBSTRATES</label>
 											    <ul class="subs" id="substrates">
-														<label class="container">Glucose
-													  	<input value="Glucose" type="checkbox" onchange=onRadioChange() name="Substrate">
+														<label class="container">ATP
+													  	<input type="checkbox" value="ATP" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
-														<label class="container">Glucose-6-Phosphate
-													  	<input type="checkbox" value="Glucose-6-Phosphate" onchange="onRadioChange()" name="Substrate">
+														<label class="container">Dihydroxyacetone Phosphate
+													  	<input type="checkbox" value="Dihydroxyacetone Phosphate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
 														<label class="container">Fructose-6-Phosphate
@@ -55,12 +55,20 @@
 													  	<input type="checkbox" value="Fructose-1,6-bisphosphate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
-														<label class="container">Dihydroxyacetone Phosphate
-													  	<input type="checkbox" value="Dihydroxyacetone Phosphate" onchange="onRadioChange()" name="Substrate">
+														<label class="container">Glucose
+													  	<input value="Glucose" type="checkbox" onchange=onRadioChange() name="Substrate">
+													  	<span class="checkmark"></span>
+														</label>
+														<label class="container">Glucose-6-Phosphate
+													  	<input type="checkbox" value="Glucose-6-Phosphate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
 														<label class="container">Glyceraldehyde-3-Phosphate
 													  	<input type="checkbox" value="Glyceraldehyde-3-Phosphate" onchange="onRadioChange()" name="Substrate">
+													  	<span class="checkmark"></span>
+														</label>
+														<label class="container">Phosphoenolpyruvate
+													  	<input type="checkbox" value="Phosphoenolpyruvate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
 														<label class="container">1,3-Bisphoglycerate
@@ -75,15 +83,23 @@
 													  	<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Substrate">
 													  	<span class="checkmark"></span>
 														</label>
-														<label class="container">Phosphoenolpyruvate
-													  	<input type="checkbox" value="Phosphoenolpyruvate" onchange="onRadioChange()" name="Substrate">
-													  	<span class="checkmark"></span>
-														</label>
 									    		</ul>
 												</div>
 												<div id="enzsContainer">
 													<label id="enzsLabel">ENZYMES</label>
 													<ul class="enzs" id="enzymes">
+														<label class="container">Aldolase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="aldolase">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Glyceraldehyde Phosphate Dehydrogenase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Glyceraldehyde phosphate dehydrogenase">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Enolase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enolase">
+															<span class="checkmark"></span>
+														</label>
 														<label class="container">Hexokinase
 															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Hexokinase">
 															<span class="checkmark"></span>
@@ -96,18 +112,6 @@
 															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphofructokinase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Aldolase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="aldolase">
-															<span class="checkmark"></span>
-														</label>
-														<label class="container">Triosephosphate Isomerase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Triosephosphate isomerase">
-															<span class="checkmark"></span>
-														</label>
-														<label class="container">Glyceraldehyde Phosphate Dehydrogenase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Glyceraldehyde phosphate dehydrogenase">
-															<span class="checkmark"></span>
-														</label>
 														<label class="container">Phosphoglycerate Kinase
 															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglycerate kinase">
 															<span class="checkmark"></span>
@@ -116,12 +120,8 @@
 															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Phosphoglycerate mutase">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Enolase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enolase">
-															<span class="checkmark"></span>
-														</label>
-														<label class="container">Pyruvate Kinase
-															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Pyruvate kinase">
+														<label class="container">Triosephosphate Isomerase
+															<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Triosephosphate isomerase">
 															<span class="checkmark"></span>
 														</label>
 													</ul>
@@ -129,8 +129,12 @@
 												<div id="prodsContainer">
 													<label id="prodsLabel">PRODUCTS</label>
 													<ul class="prods" id="products">
-														<label class="container">Glucose-6-Phosphate
-															<input type="checkbox" value="Glucose-6-Phosphate" onchange="onRadioChange()" name=Product>
+														<label class="container">ADP
+															<input type="checkbox" value="ADP" onchange="onRadioChange()" name="Product">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Dihydroxyacetone Phosphate
+															<input type="checkbox" value="Dihydroxyacetone Phosphate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
 														<label class="container">Fructose-6-Phosphate
@@ -141,12 +145,20 @@
 															<input type="checkbox" value="Fructose-1,6-bisphosphate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Dihydroxyacetone Phosphate
-															<input type="checkbox" value="Dihydroxyacetone Phosphate" onchange="onRadioChange()" name="Product">
+														<label class="container">Glucose-6-Phosphate
+															<input type="checkbox" value="Glucose-6-Phosphate" onchange="onRadioChange()" name=Product>
 															<span class="checkmark"></span>
 														</label>
 														<label class="container">Glyceraldehyde-3-Phosphate
 															<input type="checkbox" value="Glyceraldehyde-3-Phosphate" onchange="onRadioChange()" name="Product">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Phosphoenolpyruvate
+															<input type="checkbox" value="Phosphoenolpyruvate" onchange="onRadioChange()" name="Product">
+															<span class="checkmark"></span>
+														</label>
+														<label class="container">Pyruvate
+															<input type="checkbox" value="Pyruvate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
 														<label class="container">1,3-Bisphoglycerate
@@ -161,18 +173,21 @@
 															<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Product">
 															<span class="checkmark"></span>
 														</label>
-														<label class="container">Pyruvate
-															<input type="checkbox" value="Pyruvate" onchange="onRadioChange()" name="Product">
-															<span class="checkmark"></span>
-														</label>
-														<label class="container">Phosphoenolpyruvate
-															<input type="checkbox" value="Phosphoenolpyruvate" onchange="onRadioChange()" name="Product">
-															<span class="checkmark"></span>
-														</label>
 										    	</ul>
 												</div>
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
 												<button type="button" class="saveReaction" id="saveReaction">SAVE</button>
+
+												</label>
+												<label class="reversibleChoice">Reversible
+													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Reversible">
+													<span class="checkmark"></span>
+												</label>
+												<label class="reversibleChoice">Irreversible
+													<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
+													<span class="checkmark"></span>
+												</label>
+
 											</div>
 											<!-- The Modal -->
 											<div id="invalidModal" class="modal">
