Login now functional, layout and design changes needed

--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -204,6 +204,9 @@ iframe {
   background: linear-gradient(top, #19384A, #347787);
 }
 
+label {
+  display:none;
+}
 
 /*------------------------------------------------------------------
 [ Form ]*/
