--- a/testApp/templates/load.html
+++ b/testApp/templates/load.html
@@ -2,10 +2,10 @@
 
 {% block login %}
 <div class="login-flex">
-    <a href="accounts/login" class="login100-form-btn" ><button type="button">
+    <a href="accounts/login" class="login100-form-btn" ><button type="button" id="login-loadpage-btn">
         Log In
     </button></a>
-    <a href="accounts/register" class="login100-form-btn"><button type="button">
+    <a href="accounts/register" class="login100-form-btn"><button type="button" id="signup-loadpage-btn">
         Sign Up
     </button></a>
 </div>
