--- a/testApp/templates/load.html
+++ b/testApp/templates/load.html
@@ -1,15 +1,13 @@
 {% extends 'index.html' %}
 
 {% block login %}
-<div class="login-flex">
-    <div id="login-loadpage-btn>">
-        <a href="accounts/login" class="login100-form-btn" ><button type="button">
-            Log In
-        </button></a>
-        <a href="accounts/register" class="login100-form-btn"><button type="button">
-            Sign Up
-        </button></a>
-    </div>
+<div class="login-flex" id="login-loadpage-btn>">
+    <a href="accounts/login" class="login100-form-btn" ><button type="button">
+        Log In
+    </button></a>
+    <a href="accounts/register" class="login100-form-btn"><button type="button">
+        Sign Up
+    </button></a>
 
 </div>
 
